[gd_scene load_steps=3 format=3 uid="uid://bl3865o4a34u0"]

[ext_resource type="Script" path="res://old_areas/intro_layer_controller.gd" id="1_2j724"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p62vh"]
bg_color = Color(0.556863, 0.596078, 0.713726, 0.313726)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.635294, 0.423529, 0.239216, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="IntroLayer" type="CanvasLayer"]
script = ExtResource("1_2j724")

[node name="NameContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -137.5
offset_top = 33.0
offset_right = 137.5
offset_bottom = 105.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_p62vh")

[node name="NameLabel" type="Label" parent="NameContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Area Name"

[node name="IntroTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true
